near-sdk-macros/src/core_impl/code_generator/snapshots/abi_aliased_method.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 371
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn foo_one() {
    ::near_sdk::env::setup_panic_hook();
    let contract: Hello = ::near_sdk::env::state_read().unwrap_or_default();
    contract.foo();
}

