near-sdk-macros/src/core_impl/code_generator/snapshots/callback_args_vec.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[unsafe(no_mangle)]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::current_account_id() != ::near_sdk::env::predecessor_account_id()
    {
        ::near_sdk::env::panic_err(::near_sdk::errors::PrivateMethod::new("method"));
    }
    #[derive(::near_sdk::serde::Deserialize)]
    #[serde(crate = "::near_sdk::serde")]
    struct Input {
        y: String,
    }
    let Input { y }: Input = match ::near_sdk::env::input() {
        Some(input) => {
            match ::near_sdk::serde_json::from_slice(&input) {
                Ok(deserialized) => deserialized,
                Err(e) => {
                    ::near_sdk::env::panic_err(
                        ::near_sdk::errors::JsonDeserializeError::new(
                            &format!("input: {e}"),
                        ),
                    );
                }
            }
        }
        None => {
            ::near_sdk::env::panic_err(
                ::near_sdk::errors::InvalidArgument::new(
                    "Expected input since method has arguments.",
                ),
            )
        }
    };
    let x: Vec<String> = ::std::iter::Iterator::collect(
        ::std::iter::Iterator::map(
            0..::near_sdk::env::promise_results_count(),
            |i| {
                let data = ::near_sdk::env::promise_result_checked(i, usize::MAX)
                    .unwrap_or_else(|_| ::near_sdk::env::panic_err(
                        ::near_sdk::errors::CallbackComputationUnsuccessful::new(i),
                    ));
                ::near_sdk::serde_json::from_slice(&data)
                    .unwrap_or_else(|e| ::near_sdk::env::panic_err(
                        ::near_sdk::errors::JsonDeserializeError::new(
                            &format!("callback: {e}"),
                        ),
                    ))
            },
        ),
    );
    let contract = <Hello as ::near_sdk::state::ContractState>::state_read()
        .unwrap_or_default();
    Hello::method(&contract, x, y);
}
