near-sdk-macros/src/core_impl/code_generator/snapshots/ext_fn_non_bindgen_attrs.snap
---
source: near-sdk-macros/src/core_impl/code_generator/ext.rs
assertion_line: 203
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_os = "linux")]
#[allow(clippy::too_many_arguments)]
pub fn method(self) -> ::near_sdk::Promise {
    let __args = ::std::vec![];
    match self.promise_or_create_on {
        ::near_sdk::PromiseOrValue::Promise(p) => p,
        ::near_sdk::PromiseOrValue::Value(account_id) => {
            ::near_sdk::Promise::new(account_id)
        }
    }
        .function_call_weight(
            ::std::string::String::from("method"),
            __args,
            self.deposit,
            self.static_gas,
            self.gas_weight,
        )
}
